--- a/bots/Dockerfile
+++ b/bots/Dockerfile
@@ -28,4 +28,5 @@ COPY . /app
 
 EXPOSE 5000
 
-CMD [ "gunicorn", "-w", "4", "--bind", "0.0.0.0:5000", "wsgi"]
+# w specifies number of workers
+CMD [ "gunicorn", "-w", "1", "--bind", "0.0.0.0:5000", "wsgi"]
