--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     healthcheck:
         test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo  --quiet) -eq 1
         interval: 10s
-        start_period: 30s
+        # start_period: 30s
 
   flask:
     build:
